--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@neoconfetti/svelte": "^2.2.1"
+	}
 }
